--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "babel-jest": "20.0.3",
     "babel-preset-react-native": "2.1.0",
+    "eslint-config-synacor": "^1.0.1",
     "jest": "20.0.4",
     "react-test-renderer": "16.0.0-alpha.12"
   },
