--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "16.0.0-alpha.12",
     "react-native": "0.47.1",
     "react-redux": "^5.0.6",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "babel-jest": "20.0.3",
